--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unofficial-zalo",
+  "name": "zalo-chat-unofficial",
   "version": "1.0.8",
   "revision": "20190622",
   "description": "Unofficial Zalo App",
