--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "options": {
     "arch": "amd64",
     "section": "web",
-    "productName": "Unofficial Zalo"
+    "productName": "Zalo Chat Unofficial"
   },
   "icon": {
     "32x32": "src/assets/icons/linux/32x32.png",
