--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zalo-chat-unofficial",
-  "version": "1.0.9",
-  "revision": "20190622",
+  "version": "1.1.0",
+  "revision": "20250710",
   "description": "Unofficial Zalo App",
   "repository": "avinh/unofficial-zalo",
   "main": "app.js",
@@ -49,14 +49,14 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^13.1.7",
-    "electron-builder": "21.2.0",
-    "eslint": "^6.0.0",
-    "eslint-config-standard": "14.0.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "^2.27.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-standard": "^5.0.0"
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
